# tests

./: CMakeLists.txt  CMakePresets.json  conan.cmake  conanfile.txt  readme.md
src/: CMakeLists.txt  common.c  common.h  dictionary_data.c  dictionary_data.h  input_data.c  input_data.h  main.c  output_data.c  output_data.h
